-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
Any
-
3
-
17397
If the --dry-run option is used, the syntax checking allows --hsm-root to be omitted, which implies that the HSM root won't been dereferenced if doing a dry run. This does not appear to be the case.
In particular, the command:
$ lhsmtool_posix --max-sequence --dry-run /lustre
will segfault. Other instances look like they will have the same problem.
The check in ct_parseopts() that reads:
if (!opt.o_dry_run && opt.o_hsm_root == NULL)
should simply remove the "!opt.dry_run &&" clause. All valid operations require that the hsm root be specified.